<resources>
    <string name="app_name">MoviesApp</string>
    <string name="str_connectivity_alert_title">Connectivity Issue</string>
    <string name="str_connectivity_alert_message">There is an issue with your internet connection</string>
    <string name="str_connectivity_alert_open_setting">Open Setting</string>
    <string name="str_connectivity_alert_dismiss">Dismiss</string>
    <string name="txt_sort_by">Sort By:</string>
    <string name="txt_sort_popularity">Popularity</string>
    <string name="txt_sort_rating">Rating</string>
    <string name="txt_overview">Overview</string>
    <string name="txt_popularity">Popularity Ratio</string>
    <string name="txt_rating">Rating</string>
    <string name="str_default_value">NA</string>
</resources>
