<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.moduleone.activities.MainActivity">

    <data>

        <variable
            name="viewModel"
            type="com.example.moviesapp.ui.moduleone.fragment.viewmodel.MovieListViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_sort_by"
                android:padding="10dp"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:id="@+id/txt_filter_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_sort_popularity"
                android:padding="10dp"
                android:textColor="@color/colorAccent"
                android:onClick="@{()->viewModel.filterByPopularity()}"/>
            <TextView
                android:id="@+id/txt_filter_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_sort_rating"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:onClick="@{()->viewModel.filterByRating()}"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>

    </LinearLayout>
</layout>